[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["pauliesnug"]
edition = "2021"
homepage = "https://github.com/pulseflow/workers"
repository = "https://github.com/pulseflow/workers"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "fadef54000e131008ff6e9dd7efe2ba36479c077", features = ["serde", "uuid", "chrono", "serde_json"] }
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }

tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
sha1_smol = { version = "1.0.0", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }

anyhow = "1.0"
backon = "0.4"
bytes = "1.6"
once_cell = "1.19"
url = "2.5"
thiserror = "1.0"
cfg-if = "1.0.0"
futures = "0.3.30"
http = "1.1"
serde_json = "1.0"
lazy_static = "1.4"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
serde-xml-rs = "0.6"
zip = "0.6"
semver = "1.0"
rust-s3 = "0.33"
