[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["pauliesnug"]
edition = "2021"
homepage = "https://github.com/pulseflow/workers"
repository = "https://github.com/pulseflow/workers"
readme = "README.md"
license = "MIT"
version = "1.0.1"

[workspace.dependencies]
specta = { version = "2.0.0-rc.20", features = ["serde", "uuid", "chrono", "serde_json", "derive"] }

tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls-native-roots"] }
sha1_smol = { version = "1.0.1", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }
async_zip = { version = "0.0.17", features = ["full"] }

anyhow = "1.0"
bytes = "1.6"
thiserror = "1.0"
futures = "0.3.30"
serde_json = "1.0"
lazy_static = "1.4"
dotenvy = "0.15"
env_logger = "0.11"
serde-xml-rs = "0.6"
semver = "1.0"
rust-s3 = "0.34"
dashmap = "6.0"
itertools = "0.13"
tracing-error = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2", features = ["futures", "tokio"] }
