[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["pauliesnug"]
edition = "2021"
homepage = "https://github.com/pulseflow/workers"
repository = "https://github.com/pulseflow/workers"
readme = "./README.md"
license = "LicenseRef-OQL-1.2 OR MIT OR Apache-2.0"
version = "1.2.2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
deprecated_cfg_attr = "warn"
separated_literal_suffix = "warn"
missing_errors_doc = "allow"
future_not_send = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"
unused_import_braces = "warn"
deprecated = "warn"
deprecated_in_future = "forbid"
unused_must_use = "deny"

[workspace.dependencies]
specta = { version = "2.0.0-rc.20", features = ["serde", "uuid", "chrono", "serde_json", "derive"] }

tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls-native-roots"] }
sha1_smol = { version = "1.0.1", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
async_zip = { version = "0.0.17", features = ["full"] }

eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
bytes = "1.10"
thiserror = "2.0"
futures = "0.3.31"
serde_json = "1.0"
lazy_static = "1.5"
dotenvy = "0.15"
env_logger = "0.11"
serde-xml-rs = "0.6"
semver = "1.0"
rust-s3 = "0.35"
dashmap = "6.1"
itertools = "0.13"
tracing-error = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2", features = ["futures", "tokio"] }
