[package]
name = "interpulse"
description = "utilities for interacting with pulseflow apis"
publish = true
version = "0.1.3"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories = ["game-development", "api-bindings"]

[features]
bincode = ["dep:bincode"]
specta = ["dep:specta"]

[dependencies]
bincode = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
sha1_smol.workspace = true
