[package]
name = "interpulse"
description = "utilities for interacting with pulseflow apis"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories = ["game-development", "api-bindings"]

[features]
specta = ["dep:specta"]

[dependencies]
specta = { workspace = true, optional = true }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bytes.workspace = true
thiserror.workspace = true
