[package]
name = "meta_workers"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
interpulse = { path = "../interface" }
meta_patcher = { path = "../patcher" }

dotenvy.workspace = true
log.workspace = true
env_logger.workspace = true
serde-xml-rs.workspace = true
zip.workspace = true
semver.workspace = true
rust-s3.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
bytes.workspace = true
