[package]
name = "meta_workers"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
interpulse = { path = "../interface" }
meta_patcher = { path = "../patcher" }

dotenvy.workspace = true
serde-xml-rs.workspace = true
async_zip.workspace = true
rust-s3.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
bytes.workspace = true
dashmap.workspace = true
sha1_smol.workspace = true
indexmap.workspace = true
itertools.workspace = true
tracing-error.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
