[package]
name = "meta_patcher"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
interpulse = { path = "../interface" }
anyhow = { version = "1.0" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
