[package]
name = "meta_patcher"
version.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
interpulse = { path = "../interface" }

clap.workspace = true
eyre.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
